--- a/career.html
+++ b/career.html
@@ -37,7 +37,7 @@
         <h1 class="cover-heading">Career</h1>
 				<p class="lead">
           <a href="https://www.linkedin.com/in/jacob-bradley-comp-bio/?originalSubdomain=uk" class="btn btn-lg btn-secondary">LinkedIn</a>
-					<a href="drhannahtCV.pdf" class="btn btn-lg btn-secondary">Curriculum Vitae</a>
+					<a href="CV_Website.pdf" class="btn btn-lg btn-secondary">Curriculum Vitae</a>
 				</p>
 				<p>
 					<a href="https://www.ccg.ai/about/team" class="btn btn-lg btn-secondary">CCG Team</a>
