new teaching, new research, new careers!

--- a/career.html
+++ b/career.html
@@ -40,7 +40,7 @@
 					<a href="CV_Website.pdf" class="btn btn-lg btn-secondary">Curriculum Vitae</a>
 				</p>
 				<p>
-					<a href="https://www.ccg.ai/about/team" class="btn btn-lg btn-secondary">CCG Team</a>
+					<a href="https://github.com/cobrbra"       class="btn btn-lg btn-secondary">Github </a>
 					<a href="https://twitter.com/JRJB_C"       class="btn btn-lg btn-secondary">Twitter </a>
 
         </p>
