--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@
 
       <main role="main" class="inner cover">
         <h1 class="cover-heading">Research</h1>
-				<p class="lead">I am an interdisciplinary researcher, working in statistical learning theory and also cancer genomics. I believe to properly exploit the new data and methodologies available in genomic medicine and machine learning, we need researchers who can speak the language of both. In the past I've worked on  ensemble methods for weakly supervised learning, and on mathematical modelling of biological signalling pathways and efficient information transfer in promiscuous cell-cell interactions.</p>
+				<p class="lead">I am an interdisciplinary researcher, working in statistical learning and cancer genomics. I believe to properly exploit the new data and methodologies available in genomic medicine and machine learning, we need researchers who can speak the language of both. In the past I've worked on ensemble methods for weakly supervised learning, Bayesian modelling for optimisation of quantitative nucleic acid detection assays, and on mathematical modelling of biological signalling pathways and efficient information transfer in promiscuous cell-cell interactions.</p>
 		
 				<h4>
 					Current Research Interests:
@@ -59,16 +59,25 @@
 				  <b>Gemomic Instability in Cancer</b><br>
 				  The hypermutated phenotype in cancer patients is important both mechanistically and for predicting response to medication. I'm interested in high-dimensional methods for identifying predictors and consequences of genomic instability.
 				  </p>
+<!--
 				<p>
 				  <b>Machine Learning in the Real World</b><br>
-				  Beyond academia, I want to understand how machine learning and artificial intelligence are used in industry and public services. I'm particular interested in how machine learning can loosen the bottleneck in pharmaceutical development, how intellectual property transfers to an age of AI products and discoveries, and fairness in the context of healthcare research and outcomes.</p>
+				  Beyond academia, I want to understand how machine learning and statistics are used in industry and public services. I'm particular interested in how machine learning can loosen the bottleneck in pharmaceutical development, how intellectual property transfers to an age of AI products and discoveries, and fairness in the context of healthcare research and outcomes.</p>
+-->
+
 <h4>
 					Publications
 				</h4>
 				<p>
+				  <b>2022</b><br>
+					<a href = "https://cran.r-project.org/web/packages/ICBioMark/index.html">Data-driven design of targeted gene panels for estimating immunotherapy biomarkers</a><br>
+					<i>Nature Communications Biology.</i>
+				</p>
+				
+					<p>
 				  <b>2021</b><br>
-					<a href = "https://arxiv.org/abs/2102.04296">Data-driven design of targeted gene panels for estimating immunotherapy biomarkers</a><br>
-					<i>ArXiv Pre-print.</i>
+					<a href = "https://cran.r-project.org/web/packages/ICBioMark/index.html">ICBioMark: Data-driven design of targeted gene panels for estimating immunotherapy biomarkers</a><br>
+					<i>R package hosted on CRAN.</i>
 				</p>
 				
 				<p>
